# hass_gecko_in_touch3_spa

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE_NOTES.md  hacs.json  pyproject.toml  requirements_test.txt  requirements_test_gecko.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
custom_components/gecko/: __init__.py  api.py  binary_sensor.py  climate.py  cloud_tiles.py  config_flow.py  connection_manager.py  const.py  coordinator.py  diagnostics.py  energy_entity_registry.py  energy_parse.py  entity.py  fan.py  light.py  manifest.json  number.py  oauth_implementation.py  rest_alerts.py  select.py  sensor.py  services.py  services.yaml  shadow_dump.py  shadow_metrics.py  spa_config_summary.py  strings.json  telemetry.py  temperature_sanity.py  zone_shadow_merge.py
custom_components/gecko/translations/: de.json  en.json  fr.json
patches/: README.md
scripts/: gecko_live_test.env.example  gecko_paths_raw_app_1.9.0.txt  requirements-live.txt  update_gecko_from_github_branch.sh  verify_shadow_live.py  verify_shadow_live_oauth.py
tests/: conftest.py  test_class_contracts.py  test_cleaning_binary_sensor.py  test_climate_zone_sync.py  test_cloud_tiles.py  test_config_flow.py  test_connection_manager_ha.py  test_diagnostics.py  test_diagnostics_ha.py  test_energy_sensors.py  test_fan_pump.py  test_flow_speed_telemetry.py  test_gecko_helpers.py  test_import.py  test_integration_core.py  test_manifest.py  test_oauth_pkce.py  test_rest_alerts.py  test_select_watercare.py  test_sensor_metadata_ha.py  test_services_ha.py  test_shadow_dump.py  test_shadow_metrics.py  test_spa_config_summary.py  test_spa_temperature_sensors.py  test_temperature_sanity.py  test_zone_shadow_merge.py
